# EDHOC-C

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cmake/: cjson.cmake  hacl.cmake  mbedtls.cmake  nanocbor.cmake  sanitizers.cmake  wolfssl.cmake
examples/: CMakeLists.txt  initiator.c  responder.c  util.c  util.h
examples/coap/: bitarithm.h  coap.h  cpu_conf.h  init-sign-x509-coap.c  init-static-rpk-coap.c  nanocoap.c  nanocoap.h  resp-sign-x509-coap.c  resp-static-rpk-coap.c  responder.c
examples/tcp/: init-sign-x509-tcp.c  init-sign-x509.c  initiator.c  resp-sign-x509-tcp.c  resp-sign-x509.c  responder.c
fuzzing/: CMakeLists.txt  decode_msg1.c  decode_msg2.c
include/edhoc/: cbor_cert.h  check_config.h  cipher_suites.h  config.h  cose.h  creddb.h  credentials.h  edhoc.h
src/: CMakeLists.txt  cbor.h  cbor_cert.c  cipher_suites.c  cipher_suites.h  ciphersuites.c  ciphersuites.h  cose.c  cose.h  creddb.c  credentials.c  credentials.h  crypto.h  edhoc.c  edhoc_internal.c  edhoc_internal.h  format.c  format.h  message.c  message1.c  process.c  process.h
src/cbor/: cbor_internal.h  cn_cbor.c  empty.c  nanocbor.c
src/crypto/: aes128.c  aes128.h  ccm.c  ccm.h  crypto_internal.h  empty.c  hacl.c  mbedtls.c  tinycrypt.c  wolfssl.c
src/crypto/c25519/: c25519.c
src/crypto/tinycrypt/: CMakeLists.txt  aes_decrypt.c  aes_encrypt.c  ccm_mode.c  ccm_mode.h  hkdf.c  hkdf.h  sha256.h  tinycrypt.c
test/: CMakeLists.txt  json.c  json.h  test.c  test_cbor.c  test_cose.c  test_credentials.c  test_crypto.c  test_edhoc.c  test_format.c  test_initiator.c  test_internal.c  test_message.c  test_message1.c  test_process.c  test_responder.c  util.c  util.h
test/test_vectors/: cbor.json  cborCert1.json  cborCert2.json  cbor_bstr_identifier_decoding.json  cbor_bytes_decoding.json  cbor_bytes_encoding.json  cbor_suites_decoding.json  openssl-25519.cnf  openwsn1-authkey.key  openwsn1.crt  openwsn1.csr  openwsn1.der  rpk1.json  vector1.json  vector2.json  vector3.json  vector4.json
